---------------------------------------------------------------------------------------------------
Version: 0.2.11

---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2022-06-02
  Bugfixes:
    - Actually fixed Angels compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 2022-06-02
  Bugfixes:
    - Fixed Angels compatibility
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 2022-04-21
  Features:
    - Added material type selection and custom setting to allow manual override to material settings - this might not work to allow extra compatibility, but might help. Please feel free to ask for a material change to be implemented in the mod.
  Bugfixes:
    - Added compatibility with Nuclear Fuels and Clowns-AngelBob-Nuclear.
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 2022-01-25
  Bugfixes:
    - Added raise_destroy to all destroy calls apart from those on trees and base-game enemies. If anyone is tracking either, please start a thing in the discussion page of the mod portal.
---------------------------------------------------------------------------------------------------
Version: 0.2.6
Date: 2022-01-16
  Bugfixes:
    - Fixed crash when surface disappears
---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: 2021-12-29
  Features:
    - Added basic compatibility with APM nuclear
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2021-12-28
  Bugfixes:
    - Fixed Crash on detonating 1Mt from building
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2021-12-14