@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.11
 
+  Bugfixes:
+    - Fixed issue with crater tiles generating naturally
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.10
 Date: 2022-06-02
